--- a/_posts/README
+++ b/_posts/README
@@ -1,8 +1,14 @@
-Om een nieuwe blog toe te voegen, dien je enkel een file aan te maken in deze folder.
+# Hoe een blog maken?
 
-Parameters voor de frontmatter.
+Om een nieuwe blog toe te voegen, dien je enkel een file aan te maken in deze folder. De naam van de file moet beginnen met de datum zoals het volgende voorbeeld: 2019-06-30-file-name.md
+
+Parameters voor de front matter.
 
 layout: blog
 title:  "<de titel die moet worden getoond>"
 date:   <de datum waarom de blog wordt gepubliceerd, als dit in de toekomst is, wordt niets gepubliceerd. Formaat zoals 2019-06-25 09:00:00>
 tags: [<lijst van tags, meerdere tags zijn mogelijk door comma te gebruiken>]
+
+# Hoe een nieuwe tag aanmaken?
+
+Als je een nieuwe tag (onderwerp) toevoegd, moet je een nieuwe file aanmaken in de folder /tag om een pagina te genereren met de lijst van alle artikels met die tag.
