--- a/_posts/2020-03-10-intro.md
+++ b/_posts/2020-03-10-intro.md
@@ -1,8 +1,9 @@
+---
 layout: blog
 title:  "De onzichtbare kracht"
 date:   2020-03-10
-tags: [<lijst van tags, meerdere tags zijn mogelijk door comma te gebruiken>]
-
+tags: []
+---
 
 Begin dit jaar nam ik een business coach onder de arm, iemand om me te helpen mijn zaak te doen groeien.    
 Want Manopura, dat is mijn droom! Daar wil ik voor gaan, daar wil ik van kunnen leven;    
