--- a/_posts/2020-03-10-intro.md
+++ b/_posts/2020-03-10-intro.md
@@ -2,7 +2,7 @@
 layout: blog
 title:  "De onzichtbare kracht"
 date:   2020-03-10
-tags: [kracht,intuitie,energie,balans]
+tags: [kracht,intuïtie,energie,balans]
 ---
 
 Begin dit jaar nam ik een business coach onder de arm, iemand om me te helpen mijn zaak te doen groeien.    
